--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    font-size: 100%;
     margin: 0;
     padding: 0;
     display: flex;
@@ -19,9 +20,9 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
+    gap: 20px;
     width: 80%;
-    height: 60%;
+    height: 65%;
 }
 
 .block {
@@ -50,7 +51,7 @@ body {
     flex: 1;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 1fr;
+    grid-auto-rows: 35px;
     gap: 4px;
     padding:  4px 20px 4px 20px;
     overflow-y: auto;
@@ -64,7 +65,7 @@ body {
     align-items: center;
     text-decoration: none;
     color: #333;
-    font-size: 12px;
+    font-size: clamp(0.4rem, 0.4rem + 0.4vw, 0.75rem);
     text-align: left;
     border: 1px solid #ddd;
     border-radius: 4px;
